# quantPractice

./: .env  .gitignore  CLAUDE.md  CONVERSATION_LOG.md  DEVLOG.md  Demo1.py  Demo2.py  GEMINI.md  Makefile  README.md  backtest_signals.py  capital_snapshots_export.csv  ccass_tracker.py  control_scan_20260605.json  control_screener.py  hkex_snapshots_export.csv  long_entry_monitor.py  nohup.out  orderbook_snapshots_export.csv  paper_trader.py  pyproject.toml  requirements.txt  shared_config.py  short_data.db  short_data_02513.db  short_position_manager.py  short_squeeze_monitor.py  short_squeeze_monitor_02513.py  start.sh  trader_config.json  watchlist_scanner.py
config/: example.env  trader_config.json
data/exports/: capital_snapshots_export.csv  hkex_snapshots_export.csv  orderbook_snapshots_export.csv
docs/: CONVERSATION_LOG.md  DEVLOG.md  TRADELOG.md
