[project]
name = "quantpractice"
version = "0.1.0"
description = "HK short-squeeze monitoring and paper trading system"
requires-python = ">=3.11"
dependencies = [
    "futu-api>=9.0",
    "pandas>=2.0",
    "requests>=2.31",
    "lxml>=5.0",
    "akshare>=1.10",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
